# epp

./: .gitignore  CHATGPT_EPP_PROMPT.txt  HOW_TO.txt  INSTALL.md  README.md  epp_interpreter.py  epp_lexer.py  epp_parser.py  epp_runner.py  pyproject.toml
corce/: index.html  script.js  styles.css
epp-vscode-language/: README.md  language-configuration.json  package.json
epp-vscode-language/syntaxes/: epp.tmLanguage.json
examples/: advanced_control_flow.epp  counter.epp  flask_hello.epp  functions_and_lists.epp  hello.epp  number_quest.epp  pixel_dodge.epp  readable_basics.epp  snake.epp
fifa/: index.html
install/: install_epp.ps1  install_epp.sh
subway/: index.html
tests/: test_epp.py
